fix spacing on proficiencies

--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -3,7 +3,7 @@ h1 {
   padding: 50px 10px;
 }
 
-ul {
+.responsibilities {
   text-align: left;
 }
 
